idsa/src/k8s/daps/daps-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: omejdn-service
  namespace: gxfs-idsa
spec:
  selector:
    app: omejdn-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
