idsa/src/k8s/daps/daps-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: daps-ingress
  namespace: gxfs-idsa
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: gxfs.gx4fm.org
      http:
        paths:
          - path: /idsa-daps(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: daps-proxy-service
                port:
                  number: 80
